--- a/app/src/main/res/layout/activity_show_my_picture.xml
+++ b/app/src/main/res/layout/activity_show_my_picture.xml
@@ -7,13 +7,10 @@
     android:layout_height="match_parent"
     tools:context="com.wyatt.activity.MainActivity">
 
-    <TextView
-        android:id="@+id/tvGlide"
-        android:gravity="center"
-        android:background="#eeeeee"
-        android:text="Glide Demo"
-        android:layout_width="match_parent"
-        android:layout_height="30dp" />
-
+    <ImageView
+        android:id="@+id/img"
+        android:src="@mipmap/ic_launcher"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
